--- a/index.html
+++ b/index.html
@@ -7,19 +7,35 @@
   <meta name="description" content="Shree Shyam Packaging is a trusted packaging materials supplier in Chennai dealing in corrugated rolls, tapes, bubble wrap, stretch film and all kinds of packaging materials. Retail and wholesale available." />
   <style>
     body {margin:0;font-family:'Segoe UI',Arial,Helvetica,sans-serif;background:#fff;color:#1f2933;}
-    header {background:linear-gradient(135deg,#f6d365,#fda085);padding:30px 40px;}
+    header {
+  background:#F2D9A6;
+  padding:30px 40px;
+}
     .container {max-width:1200px;margin:auto;}
     h1 {margin:0;font-size:44px;letter-spacing:1px;}
     h2 {margin-top:50px;font-size:30px;}
     p {line-height:1.7;font-size:16px;}
     .hero {display:grid;grid-template-columns:1fr 1fr;gap:40px;align-items:center;}
-    .hero-box {background:#ffffff;border-radius:16px;padding:30px;box-shadow:0 15px 40px rgba(0,0,0,0.12);}
+    .hero-box {
+  background:#ffffff;
+  border-radius:16px;
+  padding:30px;
+  box-shadow:0 15px 40px rgba(15,42,68,0.18);
+}
     .logo {max-width:260px;margin-bottom:15px;}
-    .highlight {font-weight:600;color:#1b2a4e;}
+    .highlight {
+  font-weight:600;
+  color:#0f2a44;
+}
     .products {display:grid;grid-template-columns:repeat(auto-fit,minmax(220px,1fr));gap:25px;margin-top:20px;}
     .card {background:#ffffff;padding:20px;border-radius:14px;border:1px solid #e5e7eb;box-shadow:0 8px 20px rgba(0,0,0,0.08);text-align:center;}
     .card img {max-width:100%;height:150px;object-fit:contain;margin-bottom:10px;}
-    footer {background:#1b2a4e;color:#fff;padding:40px 20px;margin-top:60px;}
+    footer {
+  background:#0f2a44;
+  color:#ffffff;
+  padding:40px 20px;
+  margin-top:60px;
+}
     .contact {display:grid;grid-template-columns:1fr 1fr;gap:30px;}
     .whatsapp {position:fixed;bottom:20px;right:20px;background:#25D366;color:#fff;padding:14px 20px;border-radius:50px;text-decoration:none;font-weight:600;box-shadow:0 8px 20px rgba(0,0,0,0.3);}
     .whatsapp:hover {background:#1ebe5d;}
