--- a/index.html
+++ b/index.html
@@ -6,32 +6,50 @@
   <title>Shree Shyam Packaging | Packaging Materials Supplier in Chennai</title>
   <meta name="description" content="Shree Shyam Packaging is a trusted packaging materials supplier in Chennai dealing in corrugated rolls, tapes, bubble wrap, stretch film and all kinds of packaging materials. Retail and wholesale available." />
   <style>
-    body {margin:0;font-family:'Segoe UI',Arial,Helvetica,sans-serif;background:#fff;color:#1f2933;}
+    body {
+  margin:0;
+  font-family:'Segoe UI', Arial, Helvetica, sans-serif;
+  background:#ffffff;
+  color:#0f2a44;
+}
     header {
-  background:#F2D9A6;
-  padding:30px 40px;
+  background:#F2D9A6; /* premium yellow */
+  padding:40px 40px;
 }
     .container {max-width:1200px;margin:auto;}
-    h1 {margin:0;font-size:44px;letter-spacing:1px;}
+    h1 {
+  margin:0;
+  font-size:44px;
+  letter-spacing:1px;
+  color:#0f2a44; /* dark blue for contrast */
+}
     h2 {margin-top:50px;font-size:30px;}
     p {line-height:1.7;font-size:16px;}
     .hero {display:grid;grid-template-columns:1fr 1fr;gap:40px;align-items:center;}
     .hero-box {
-  background:#ffffff;
+  background:#0f2a44; /* dark blue box for contrast */
+  color:#ffffff;
   border-radius:16px;
   padding:30px;
-  box-shadow:0 15px 40px rgba(15,42,68,0.18);
+  box-shadow:0 15px 40px rgba(15,42,68,0.25);
 }
     .logo {max-width:260px;margin-bottom:15px;}
     .highlight {
   font-weight:600;
-  color:#0f2a44;
+  color:#0f2a44; /* dark blue */
 }
     .products {display:grid;grid-template-columns:repeat(auto-fit,minmax(220px,1fr));gap:25px;margin-top:20px;}
-    .card {background:#ffffff;padding:20px;border-radius:14px;border:1px solid #e5e7eb;box-shadow:0 8px 20px rgba(0,0,0,0.08);text-align:center;}
+    .card {
+  background:#ffffff;
+  padding:20px;
+  border-radius:14px;
+  border:1px solid #e5e7eb;
+  box-shadow:0 8px 20px rgba(15,42,68,0.12);
+  text-align:center;
+}
     .card img {max-width:100%;height:150px;object-fit:contain;margin-bottom:10px;}
     footer {
-  background:#0f2a44;
+  background:#0f2a44; /* dark blue */
   color:#ffffff;
   padding:40px 20px;
   margin-top:60px;
@@ -43,7 +61,7 @@
   </style>
 </head>
 <body>
-
+  
 <header>
   <div class="container hero">
     <div>
@@ -59,12 +77,12 @@
     </div>
   </div>
 </header>
-
+  
 <section class="container">
   <h2>About Us</h2>
   <p>Shree Shyam Packaging is a trusted packaging material shop based in Chennai. We mainly deal in <strong>corrugated rolls</strong> and provide a wide range of packaging solutions for retail shop owners and businesses.</p>
 </section>
-
+  
 <section class="container">
   <h2>Our Products</h2>
   <div class="products">
@@ -82,7 +100,7 @@
     <div class="card">Corrugated Sheets</div>
   </div>
 </section>
-
+  
 <section class="container">
   <h2>Why Choose Us</h2>
   <ul>
@@ -92,7 +110,7 @@
     <li>Trusted local supplier</li>
   </ul>
 </section>
-
+  
 <footer>
   <div class="container contact">
     <div>
@@ -105,7 +123,7 @@
     </div>
   </div>
 </footer>
-
+  
 <a class="whatsapp" href="https://wa.me/919150246606" target="_blank">💬 WhatsApp Us</a>
 </body>
 </html>
